--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
       <!-- Hero screen -->
       <section class="hero">
         <div class="container hero-container">
-          <ul class="hero-socials">
-            <li class="hero-socials-link">
+          <ul class="hero social-list">
+            <li class="hero social-item">
               <a
-                class="link"
+                class="link social-links"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer nofollow"
                 >Instagram</a
               >
             </li>
-            <li class="hero-socials-link">
+            <li class="hero social-item">
               <a
-                class="link"
+                class="link social-links"
                 href=""
                 target="_blank"
                 rel="noopener noreferrer nofollow"
@@ -212,21 +212,56 @@
               <p class="barber-subtitle">Extreme Barber</p>
               <ul class="barber-socials-list">
                 <li class="barber-socials-item">
-                  <a href="" aria-label="Instagram"
-                    ><svg class="icon-instagram" width="20" height="20">
+                  <a
+                    class="barber-socials-link link"
+                    href=""
+                    aria-label="instagram"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    ><svg class="barber-socials-icon">
                       <use
                         href="./images/icon-sprite.svg#icon-instagram"
                       ></use></svg
                   ></a>
                 </li>
                 <li class="barber-socials-item">
-                  <a href="" aria-label="Twitter"></a>
+                  <a
+                    class="barber-socials-link link"
+                    href=""
+                    aria-label="twitter"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    ><svg class="barber-socials-icon">
+                      <use
+                        href="./images/icon-sprite.svg#icon-twitter"
+                      ></use></svg
+                  ></a>
                 </li>
                 <li class="barber-socials-item">
-                  <a href="" aria-label="Facebook"></a>
+                  <a
+                    class="barber-socials-link link"
+                    href=""
+                    aria-label="facebook"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    ><svg class="barber-socials-icon">
+                      <use
+                        href="./images/icon-sprite.svg#icon-facebook"
+                      ></use></svg
+                  ></a>
                 </li>
                 <li class="barber-socials-item">
-                  <a href="" aria-label="LinkedIn"></a>
+                  <a
+                    class="barber-socials-link link"
+                    href=""
+                    aria-label="linkedin"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    ><svg class="barber-socials-icon">
+                      <use
+                        href="./images/icon-sprite.svg#icon-linkedin"
+                      ></use></svg
+                  ></a>
                 </li>
               </ul>
             </li>
@@ -241,16 +276,56 @@
               <p class="barber-subtitle">Extreme Barber</p>
               <ul class="barber-socials-list">
                 <li class="barber-socials-item">
-                  <a href="" aria-label="Instagram"></a>
+                  <a
+                    class="barber-socials-link link"
+                    href=""
+                    aria-label="instagram"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    ><svg class="barber-socials-icon">
+                      <use
+                        href="./images/icon-sprite.svg#icon-instagram"
+                      ></use></svg
+                  ></a>
                 </li>
                 <li class="barber-socials-item">
-                  <a href="" aria-label="Twitter"></a>
+                  <a
+                    class="barber-socials-link link"
+                    href=""
+                    aria-label="twitter"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    ><svg class="barber-socials-icon">
+                      <use
+                        href="./images/icon-sprite.svg#icon-twitter"
+                      ></use></svg
+                  ></a>
                 </li>
                 <li class="barber-socials-item">
-                  <a href="" aria-label="Facebook"></a>
+                  <a
+                    class="barber-socials-link link"
+                    href=""
+                    aria-label="facebook"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    ><svg class="barber-socials-icon">
+                      <use
+                        href="./images/icon-sprite.svg#icon-facebook"
+                      ></use></svg
+                  ></a>
                 </li>
                 <li class="barber-socials-item">
-                  <a href="" aria-label="LinkedIn"></a>
+                  <a
+                    class="barber-socials-link link"
+                    href=""
+                    aria-label="linkedin"
+                    target="_blank"
+                    rel="noopener noreferrer nofollow"
+                    ><svg class="barber-socials-icon">
+                      <use
+                        href="./images/icon-sprite.svg#icon-linkedin"
+                      ></use></svg
+                  ></a>
                 </li>
               </ul>
             </li>
@@ -266,38 +341,54 @@
               <ul class="barber-socials-list">
                 <li class="barber-socials-item">
                   <a
-                    class="barber-socials-link"
+                    class="barber-socials-link link"
                     href=""
-                    aria-label="Instagram"
+                    aria-label="instagram"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
+                    ><svg class="barber-socials-icon">
+                      <use
+                        href="./images/icon-sprite.svg#icon-instagram"
+                      ></use></svg
                   ></a>
                 </li>
                 <li class="barber-socials-item">
                   <a
-                    class="barber-socials-link"
+                    class="barber-socials-link link"
                     href=""
-                    aria-label="Twitter"
+                    aria-label="twitter"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
+                    ><svg class="barber-socials-icon">
+                      <use
+                        href="./images/icon-sprite.svg#icon-twitter"
+                      ></use></svg
                   ></a>
                 </li>
                 <li class="barber-socials-item">
                   <a
-                    class="barber-socials-link"
+                    class="barber-socials-link link"
                     href=""
-                    aria-label="Facebook"
+                    aria-label="facebook"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
+                    ><svg class="barber-socials-icon">
+                      <use
+                        href="./images/icon-sprite.svg#icon-facebook"
+                      ></use></svg
                   ></a>
                 </li>
                 <li class="barber-socials-item">
                   <a
-                    class="barber-socials-link"
+                    class="barber-socials-link link"
                     href=""
-                    aria-label="LinkedIn"
+                    aria-label="linkedin"
                     target="_blank"
                     rel="noopener noreferrer nofollow"
+                    ><svg class="barber-socials-icon">
+                      <use
+                        href="./images/icon-sprite.svg#icon-linkedin"
+                      ></use></svg
                   ></a>
                 </li>
               </ul>
@@ -390,20 +481,20 @@
 
     <footer>
       <div class="footer container">
-        <p>&#169; Copyright 2020</p>
-        <ul>
-          <li>
+        <p class="copyright">&#169; Copyright 2020</p>
+        <ul class="social-list">
+          <li class="social-item">
             <a
-              class="link"
+              class="link social-links"
               href=""
               target="_blank"
               rel="noopener noreferrer nofollow"
               >Instagram</a
             >
           </li>
-          <li>
+          <li class="social-item">
             <a
-              class="link"
+              class="link social-links"
               href=""
               target="_blank"
               rel="noopener noreferrer nofollow"
