--- a/index.html
+++ b/index.html
@@ -14,30 +14,37 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
     />
+    <link rel="stylesheet" href="./CSS/main.min.css" />
     <link rel="stylesheet" href="./CSS/styles.css" />
   </head>
   <body>
     <!-- Header -->
     <header class="header">
-      <div class="container header-container">
-        <a class="header-logo" href="./index.html">
+      <div class="container header__container">
+        <a class="logo" href="./index.html">
           <!-- <img src="./images/Logo.svg" alt="Logo" /> -->
           <svg width="69" height="56">
             <use href="./images/icon-sprite.svg#icon-logo"></use>
           </svg>
         </a>
-        <nav class="main-nav">
-          <ul class="header-menu">
-            <li class="header-item"><a class="link" href="">About</a></li>
-            <li class="header-item">
-              <a class="link" href="">Services and prices</a>
+        <nav class="navigation">
+          <ul class="header__menu">
+            <li class="header__item">
+              <a class="header__link link" href="">About</a>
             </li>
-            <li class="header-item"><a class="link" href="">Barbers</a></li>
-            <li class="header-item"><a class="link" href="">Contacts</a></li>
+            <li class="header__item">
+              <a class="header__link link" href="">Services and prices</a>
+            </li>
+            <li class="header__item">
+              <a class="header__link link" href="">Barbers</a>
+            </li>
+            <li class="header__item">
+              <a class="header__link link" href="">Contacts</a>
+            </li>
           </ul>
         </nav>
-        <div class="header-right-link">
-          <a class="link header-contact" href="tel:+380441111111"
+        <div class="header__contact">
+          <a class="contact__link header__link link" href="tel:+380441111111"
             >+38 044 111 11 11</a
           >
           <button class="button" type="button">Online-booking</button>
